SG-1564 - fix spotlight image and adjust spacing for featured items

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-person.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-person.scss
@@ -199,14 +199,12 @@
     .profile--optional-content {
       clear: both;
       margin-top: 40px;
-      .field__item {
-        display: inline-block;
-        width: 31%;
-        margin: 0 1% 0 1%;
-      }
       .sfgov-spotlight {
-        padding-top: 0;
-        padding-bottom: 8px;
+        padding-bottom: 26px;
+      }
+      .sfgov-featured-items {
+        padding-left: 0;
+        padding-right: 0;
       }
     }
 
